Added Slice And Dice Exam

--- a/WEB/SliceAndDice/Exam/exam/index.html
+++ b/WEB/SliceAndDice/Exam/exam/index.html
@@ -17,10 +17,10 @@
 						<a href="#">About us</a></li><li>
 						<a href="#">Testimonial</a></li><li>
 						<a href="#">Blog</a></li><li>
-						<a href="#">Sitemap</a></li><li>
+						<a href="#" class="disable-nav-items">Sitemap</a></li><li>
 						<a href="#">Affiliates</a></li><li>
-						<a href="#">Forum</a></li><li>
-						<a href="#">Updates</a></li>
+						<a href="#" class="disable-nav-items">Forum</a></li><li>
+						<a href="#" class="disable-nav-items">Updates</a></li>
 					</ul>
 				</nav>
 				<div id="slider">
@@ -32,7 +32,6 @@
 					<div href="#" id="right-arrow"></div>
 				</div>	
 				<div id="theme-image">
-					<img src="images/theme-image.png">
 				</div>			
 			</div>
 		</header>
@@ -103,7 +102,7 @@
 				<h3>This Is a Description For The Homepage</h3>
 				<section>
 					<div class="big-circle"></div>
-					<div class="big-circle" id="big-circle-center"><div>Mar 13,2012
+					<div class="big-circle" id="big-circle-center"><div class="disable-items-circle">Mar 13,2012
 						<div id="circle-title">The Is The Awesome Project Title</div>
 						<button>Read More</button></div>
 					</div>
